# model-evals-practice

./: .env.sample  README.md  main.py  pyproject.toml  utils.py
tools/: __init__.py  analyze_sales_data.py  lookup_sales.py  visualize_data.py
