[project]
name = "model-evals-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix>=11.32.1",
    "arize-phoenix-otel>=0.13.0",
    "cerebras-cloud-sdk>=1.50.1",
    "duckdb>=1.3.2",
    "fastparquet>=2024.11.0",
    "ipython>=9.5.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.102.0",
    "openinference-instrumentation-openai>=0.1.31",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
]
